# VulnTrain

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: ai.md  attack-techniques-dataset.md  cnvd-severity-improvements.md  conf.py  cwe-classification-improvements.md  hpc.md  index.md
tools/cwe/: README.md  build_child_to_ancestor.py  cwe_usage.json  hierarchy.py  mapping_child_parent_cwe.py  update_cwe_knowledge_base.py  vulnerability.circl.lu.json
vulntrain/: classify.py  conf.py.sample  config.py  create_dataset.py  summarize.py  utils.py  validate.py
vulntrain/cards/: dataset_card_cnvd.md  dataset_card_vulnerability_scores.md  model_card_cnvd_severity.md
vulntrain/config/: __init__.py  conf_sample.py
vulntrain/data/: deep_child_to_ancestor.json
vulntrain/datasets/: attack_guesser_dataset.py  attack_llm_labeler.py  create_dataset.py  cwe-guesser-dataset.py  dataset_card_cnvd.md
vulntrain/trainers/: attack_guesser.py  benchmark-results.py  benchmark_models.py  child_to_parent_mapping.json  classify-cnvd.py  classify.py  classify_severity.py  classify_severity_cnvd.py  cwe-guesser-commit-mess.py  cwe_guesser_patches.py  cwe_hierarchy.json  deep_child_to_ancestor.json  generation_description.py  hierarchy.py  mapping_child_parent_cwe.py  model_card_cnvd_severity.md  multilabel_model.py  parent_to_children_mapping.json  summarize.py
vulntrain/validators/: attack_guesser.py  attack_inference.py  benchmark_models.py  evaluation.py  severity.py  severity_cnvd.py  summarize.py  validate.py
