[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "VulnTrain"
version = "1.4.0"
description = "Generate datasets amd models based on vulnerabilities data from Vulnerability-Lookup."
authors = [
    {name = "Cédric Bonhomme",email = "cedric.bonhomme@circl.lu"}
]
license = "GPL-3.0-or-later"
readme = "README.md"

dynamic = ["classifiers"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "nltk (>=3.9.1)",
    "pandas (>=2.2.3)",
    "datasets (>=3.5.0)",
    "valkey (>=6.1.0)",
    "torch (>=2.7.0)",
    "transformers[torch] (>=4.49.0,<5.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "codecarbon (>=2.8.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "cvss (>=3.4,<4.0)"
]


[project.urls]
Homepage = "https://github.com/vulnerability-lookup/VulnTrain"
Repository = "https://github.com/vulnerability-lookup/VulnTrain"
Changelog = "https://github.com/vulnerability-lookup/VulnTrain/blob/main/CHANGELOG.md"


[project.scripts]
# Commands for datasets generation:
vulntrain-dataset-generation = "vulntrain.datasets.create_dataset:main"
# Commands for trainings:
vulntrain-train-description-generation = "vulntrain.trainers.summarize:main"
vulntrain-train-severity-classification = "vulntrain.trainers.classify:main"
# Commands for validations:
vulntrain-validate-text-generation = "vulntrain.validators.summarize:main"
vulntrain-validate-severity-classification = "vulntrain.validators.severity:main"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = [
    "README.md",
    "COPYING",
]


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"

[tool.isort]
profile = "black"
